# mminer

./: .gitignore  CMakeLists.txt  gjngyjj.txt  hagoo.py  nohup.out  requirements.txt
hon/src/: main.cpp
hon/versions/0.0.1/: CMakeLists.txt
hon/versions/0.0.1/pyrx.egg-info/: PKG-INFO  SOURCES.txt
hon/versions/0.0.1/wminer/: miner.py
hon/versions/0.0.2/src/: main.cpp
hon/versions/0.0.2/wminer/: miner.py
hon/versions/cccp/unoptimized/: CMakeLists.txt
hon/versions/cccp/unoptimized/src/: main.cpp  rx-slow-hash.c
hon/versions/cccp/unoptimized/wminer/: miner.py
hon/wminer/: miner.py
mrx/RandomX/: CMakeLists.txt
src/: main.cpp
wminer/: miner.py
wminer/versions/0.0.1/: miner.py
